<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_iglesia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Iglesia"
                android:textAlignment="viewStart"
                android:textSize="50sp" />



            <TextView
                android:id="@+id/tv_Concatedral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Concatedral"
                android:textAlignment="viewStart"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_ermita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Ermita"
                android:textAlignment="viewStart"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_convento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Convento"
                android:textAlignment="viewStart"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_torre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Torre"
                android:textAlignment="viewStart"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_casa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Casa"
                android:textAlignment="viewStart"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_monumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Monumento"
                android:textAlignment="viewStart"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_palacio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Palacio"
                android:textAlignment="viewStart"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_escultura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Escultura"
                android:textAlignment="viewStart"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_eSingular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Edificio Singular"
                android:textAlignment="viewStart"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_crucero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Crucero"
                android:textAlignment="viewStart"
                android:textSize="50sp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>