...
            android:text="Nombre Monumento"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/button_favorite"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/button_fav"
            android:checked="false"
            android:text=""
...
